load("@io_bazel_rules_go//go:def.bzl", "cgo_library", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "types_darwin.go",
        "types_dragonfly.go",
        "types_freebsd.go",
        "types_netbsd.go",
        "types_openbsd.go",
        "types_solaris.go",
        "asm_darwin_amd64.s",
        "constants.go",
        "dirent.go",
        "endian_little.go",
        "env_unix.go",
        "env_unset.go",
        "flock.go",
        "race0.go",
        "sockcmsg_unix.go",
        "sockcmsg_linux.go",
        "str.go",
        "syscall.go",
        "syscall_bsd.go",
        "syscall_linux.go",
        "syscall_darwin.go",
        "syscall_darwin_amd64.go",
        "syscall_linux_amd64.go",
        "syscall_linux_amd64_gc.go",
        "syscall_unix.go",
        "syscall_unix_gc.go",
        "pagesize_unix.go",
        "zerrors_darwin_amd64.go",
        "zsyscall_darwin_amd64.go",
        "zsysnum_darwin_amd64.go",
        "ztypes_darwin_amd64.go",
        "zerrors_linux_amd64.go",
        "zsyscall_linux_amd64.go",
        "zsysnum_linux_amd64.go",
        "ztypes_linux_amd64.go",
    ],
    visibility = ["//visibility:public"],
)